--- a/app/assets/javascripts/templates/people/_person.handlebars
+++ b/app/assets/javascripts/templates/people/_person.handlebars
@@ -5,5 +5,9 @@
   <dl>
     <dt>Sex:</dt>
     <dd>{{sex}}</dd>
+    <dt>Email:</dt>
+    <dd>{{email}}</dd>
+    <dt>Claim To Fame:</dt>
+    <dd>{{clameToFame}}</dd>
   </dl>
 </li>
