Can add person from empty collection

--- a/app/assets/javascripts/templates/people/_no_people.handlebars
+++ b/app/assets/javascripts/templates/people/_no_people.handlebars
@@ -1,4 +1,4 @@
 <li>
   You didn't think any of those people were cool?
-  How about adding some of your cool peeps
+  {{#linkTo "people.new"}}How about adding some of your cool peeps{{/linkTo}}
 </li>
